--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.9",
-    "@react-navigation/native": "^5.1.6",
-    "@react-navigation/stack": "^5.2.11",
+    "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.1.1",
     "faker": "^4.1.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.5.0"
+    "react-native-screens": "^2.5.0",
+    "react-native-shared-element": "^0.7.0",
+    "react-navigation-shared-element": "^5.0.0-alpha1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
